--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.2"
 services:
-  ch:
+  clickhouse:
     build:
         context: .
         dockerfile: clickhouse.Dockerfile
@@ -8,37 +8,36 @@ services:
             - yandex/clickhouse-server:latest
     ports:
         - "8123:8123"
+        - "9000:9000"
+        - "9009:9009"
+    ulimits:
+        nproc: 65535
+        nofile:
+            soft: 262144
+            hard: 262144
     volumes:
-        -  ch_db:/var/lib/clickhouse
+        -  clickhouse_store:/var/lib/clickhouse
+    environment:
+        - CLICKHOUSE_USER=admin
+        - CLICKHOUSE_PASSWORD=admin
     networks:
-        - clickhouse
+        - clickhouse_net
     restart: always
   tabix:
     image: spoonest/clickhouse-tabix-web-client
     ports:
         - "8124:80"
     networks:
-        - clickhouse
-    depends_on:
-        - ch
-    restart: always
-  mysql:
-    image: mariadb
+        - clickhouse_net
     environment:
-        - MYSQL_ROOT_PASSWORD=root
-        - MYSQL_TCP_PORT=3306
-    ports:  
-        - "3306:3306"
-    volumes:
-        -  mysql:/var/lib/mysql
-    networks:
-        - mysql
+        - USER=admin
+        - PASSWORD=admin
+    depends_on:
+        - clickhouse
     restart: always
 
 networks:
-    clickhouse:
-    mysql:
+    clickhouse_net:
     
 volumes:
-    ch_db:
-    mysql:
+    clickhouse_store:
